tests/baselines/reference/parserStrictMode14.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode14.ts (3 errors) ====
    "use strict";
    with (a) {
    ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
          ~
!!! error TS2304: Cannot find name 'a'.
          ~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
    }